apps/prowlarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: media
  labels:
    app: prowlarr
spec:
  type: ClusterIP
  selector:
    app: prowlarr
  ports:
  - name: webui
    port: 9696
    targetPort: 9696
